line reflection implemented

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,11 @@
     </div>
 
     <div class="group">
+      <button id="reflectBtn" title="Reflect selected vertices across a line">Reflect</button>
+      <span id="modeHint" class="hint" style="display:none;">Click two points to define a reflection line. Press Esc to cancel.</span>
+    </div>
+
+    <div class="group">
       <button id="undoBtn" title="Undo (Ctrl+Z)">Undo</button>
       <button id="clearAll">Clear all</button>
       <span class="hint">Tip: Click to add vertices. Click a vertex to select/deselect. Use mouse wheel or +/- to zoom. </span>
