images transformations now working.

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
         <div class="group" role="group" aria-label="History actions">
           <button id="undoBtn" type="button" title="Undo (Ctrl+Z)">Undo</button>
           <button id="clearAll" type="button">Clear all</button>
-          <span class="hint">Tip: Click to add vertices. Click a vertex to select/deselect. Use mouse wheel or +/- to zoom. </span>
+          <span class="hint">Tip: Click canvas to add vertices. Click a vertex or image to select it. Selected images have a bold yellow outline. Use mouse wheel or +/- to zoom.</span>
         </div>
       </details>
     </nav>
