added meme wars. added 1 player mode for battleship and meme wars. updated stats for battle modes. updated displayed info for selected lines in coordinate plane mode.

--- a/templates/index.html
+++ b/templates/index.html
@@ -120,6 +120,7 @@
         <div class="group" role="group" aria-label="Mode switch">
           <button type="button" id="goToLineMode" title="Switch to Line Graph Mode" onclick="window.location.href='{{ url_for('line_mode') }}'">Line Graph Mode</button>
           <button type="button" id="goToBattleship" title="Switch to Battleship Mode" onclick="window.location.href='{{ url_for('battleship') }}'">Battleship Mode</button>
+          <button type="button" id="goToMemeWars" title="Switch to Meme Wars!!!" onclick="window.location.href='{{ url_for('meme_wars') }}'">Meme Wars!!!</button>
         </div>
       </div>
 
